--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,11 @@ install:
   - sudo apt-get install python-matplotlib
   - sudo apt-get install nano
   - sudo apt-get install vim
+  - sudo chmod 600 .ssh/id_rsa
+  - sudo chmod 600 .ssh/knoun_hosts
+  - sudo chmod 600 .ssh/id_rsa.pub
+  
+  
  
 
 
