--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - sudo apt-get install nano
   - sudo apt-get install vim
   - sudo chmod 600 .ssh/id_rsa
-  - sudo chmod 600 .ssh/knoun_hosts
+  - sudo chmod 600 .ssh/known_hosts
   - sudo chmod 600 .ssh/id_rsa.pub
   
   
